# monoid-extras

./: .gitignore  .travis.yml  CHANGES  LICENSE  README.markdown  flake.nix  monoid-extras.cabal
.github/workflows/: ci.yml  haskell-ci.yml
benchmarks/: SemiDirectProduct.hs
src/: Test.hs
src/Data/Monoid/: Action.hs  Coproduct.hs  Cut.hs  Deletable.hs  Endomorphism.hs  Inf.hs  MList.hs  Partial.hs  PosInf.hs  Priority.hs  Recommend.hs  SemiDirectProduct.hs  Set.hs  Split.hs  WithSemigroup.hs
src/Data/Monoid/Action/: LeftAction.hs  RightAction.hs
src/Data/Monoid/Coproduct/: Strict.hs
src/Data/Monoid/SemiDirectProduct/: Strict.hs
src/Data/Semigroup/: Coproduct.hs
