name:                monoid-extras
version:             0.1.0.0
synopsis:            Various extra monoid-related definitions and utilities
description:         Various extra monoid-related definitions and utilities, 
                     such as monoid actions, monoid coproducts, "deletable" 
                     monoids, and "split" monoids.
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          diagrams-discuss@googlegroups.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10
library
  exposed-modules:   Data.Monoid.Action,
                     Data.Monoid.Deletable,
                     Data.Monoid.Coproduct,
                     Data.Monoid.WithSemigroup,
                     Data.Monoid.Split

  build-depends:     base >= 4.3,
                     semigroups >= 0.8 && < 0.9

  -- Directories containing source files.
  hs-source-dirs:      src
